
    Also, it sticks the binaries in some stupid place so my build aliases don't work...

    FAAAAAAAAAAK...

    Fix this mess.

    Alright. Implemented my own clean.

    Moved output to "bin" so I could execute it.

    Verified working.

    Removed all the stuff that disabled network2.h socket stuff.

    Now to get that working again in VS15!


Friday April 22nd, 2016
=======================

    There is a bug in chunk sender when the chunk size is small (eg. 2-10 bytes or so)

    Reduced maximum chunk size to a point where it's failing 100%

    What the fuck is going on?!

    It's the end of packet serialize check...

    Why is it failing here and not elsewhere?!

    Ah.... it must be a desync that only shows up with small fragments?

    Mmmmm. I'm pretty sure it's a bug in serialize_bytes!

    Confirmed. If I replace the serialize_bytes with a simpler implementation, it works fine.

    There must be a bug when serialize_bytes has a small number of bytes (eg. no body)

    Fixed by using the simple non-head/tail codepath for read/write bytes if the # of bytes is <= 8.


Sunday April 3rd, 2016
======================


    Now actually need to hook up the example serialization code in 002 and make it as clean as possible.

    I think I'm going to skip the +/- integer trick, or put it before the object array stuff in the article?

    Sorted out randomized object data.

    Ready to finish writing article.
    

Saturday April 2nd, 2016
========================

    Make sure to actually test the serialize_bytes and serialize_string

    It's actually really annoying to have to use serialize methods when you are splitting read/write, eg. for sets of objects.

    Maybe split out and have:

        int value = read_bits( stream, 32 );

        write_bits( stream, EOF, 32 );

    etc...

    I think this is the best.

    Best of both world!

    Sketched out methods.

    Moved compressed float into 002 example. Not part of core library.

