@@ -74,6 +74,12 @@ Saturday April 23rd, 2016
 
     Now to get that working again in VS15!
 
+    Back to windows!
+
+    Broken VS2015 install. Repaired.
+
+    Rest of breakage was caused by #define min #define max fucking up the random_int and random_float functions
+
 
 Friday April 22nd, 2016
 =======================
